# padel-monitor

./: README-HANDOFF.md
browser-harness/: SKILL.md  install.md
browser-harness/domain-skills/megapolis-real/: commercial-rent-monitoring.md
docs/: final-architecture.md  improvement-plan.md  real-estate-monitor-architecture.md
padel-monitor/: .env.example  AGENTS.md  README.md  config.yaml  pyproject.toml  requirements.txt
padel-monitor/.pi/skills/collector-repair/: SKILL.md
padel-monitor/.pi/skills/padel-weekly-report/: SKILL.md
padel-monitor/deploy/: crontab.example
padel-monitor/padel_monitor/: cli.py  config.py  crawl.py  db.py  dedup.py  enrich.py  geo.py  inbox.py  mapgen.py  normalize.py  rescore.py  rules.py  scoring.py  telegram.py  weekly.py
padel-monitor/padel_monitor/adapters/: base.py  kufar.py  megapolis.py  nca_auctions.py  realt.py  realt_auctions.py
padel-monitor/pi/: competitors.md  preferences.md
padel-monitor/pi/browser-harness/domain-skills/kufar/: commercial-rent-monitoring.md
padel-monitor/pi/browser-harness/domain-skills/realt/: commercial-rent-monitoring.md
padel-monitor/pi/geo/: minsk-metro.yaml
padel-monitor/pi/site-specs/: auctions.md  kufar.md  megapolis.md  realt.md
raw/: pasted-text-experiment-summary.txt
workspace/: AGENTS.md
