[project]
name = "padel-monitor"
version = "0.2.0"
description = "Детерминированные коллекторы объявлений аренды под падел-корт (Минск). LLM-слой и оркестрация — Pi (pi-mono)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
padel-collect = "padel_monitor.cli:collect_main"
padel-enrich = "padel_monitor.cli:enrich_main"
padel-candidates = "padel_monitor.cli:candidates_main"
padel-save-verdicts = "padel_monitor.cli:save_verdicts_main"
padel-telegram = "padel_monitor.cli:telegram_main"
padel-map = "padel_monitor.cli:map_main"
padel-rescore = "padel_monitor.cli:rescore_main"

[dependency-groups]
dev = [
    "browser-harness>=0.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["padel_monitor"]
